--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,16 @@
 .header-title {
   font-weight: bold;
 }
-button.connection-toggle {
+
+button.krust-toggle {
   text-decoration: underline;
 }
-button.connection-toggle:checked {
-  background:  	#b7f39b;
+
+button.krust-toggle:checked {
+  background: #b7f39b;
   text-decoration: underline;
 }
+
 .status-bar {
   background: #FDEBD8;
 }
