--- a/src/styles.css
+++ b/src/styles.css
@@ -69,3 +69,24 @@ tab:selected {
   text-decoration-line: none;
 
 }
+
+scrolledwindow.entry {
+  /* background-color: alpha(currentColor, .1); */
+  background-color: rgb(255,255,255);
+  border-radius: 12px;
+  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.03), 0 1px 3px 1px rgba(0, 0, 0, 0.07), 0 2px 6px 2px rgba(0, 0, 0, 0.03);
+}
+
+scrolledwindow.entry:focus-within {
+  /* outline-color: alpha(@accent_color, .5); */
+  outline-width: 0px;
+  outline-offset: -2px;
+  outline-style: solid;
+}
+
+scrolledwindow.entry textview,
+scrolledwindow.entry textview text {
+  background: none;
+  color: inherit;
+}
