--- a/src/styles.less
+++ b/src/styles.less
@@ -23,8 +23,9 @@ button.krust-toggle:checked {
   background: #FDEBD8;
 }
 
+/*
 .tab-close-button {}
-
+*/
 columnview.column-separators listview row:nth-child(odd):not(:selected) {
   background-color: #ebeaeafd;
 }
@@ -72,7 +73,7 @@ tab:selected {
 
 scrolledwindow.entry {
   /* background-color: alpha(currentColor, .1); */
-  background-color: rgb(255,255,255);
+  background-color: rgb(255, 255, 255);
   border-radius: 12px;
   /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.03), 0 1px 3px 1px rgba(0, 0, 0, 0.07), 0 2px 6px 2px rgba(0, 0, 0, 0.03);
@@ -89,4 +90,41 @@ scrolledwindow.entry textview,
 scrolledwindow.entry textview text {
   background: none;
   color: inherit;
+}
+
+@keyframes needs_attention_keyframes {
+  0% {}
+
+  10% {
+    background-color: @accent_bg_color;
+  }
+
+  100% {}
+}
+
+#TaskManager {
+  background-color: alpha(currentColor, .1);
+}
+
+#TaskManager.needs-attention>menubutton>button {
+  animation: needs_attention_keyframes 2s ease-in-out;
+}
+
+#TaskManager menubutton>button listview {
+  background: none;
+  border-spacing: 9px;
+  font-weight: bold;
+}
+
+/* Give the button same colors as the rows */
+#TaskManager menubutton>button *:hover {
+  background-color: inherit;
+  background: none;
+}
+
+/* Remove white background and highlight on hover which GTK adds by default
+ * to GtkListBox. TODO: Switch to GtkListView and drop this CSS hack. */
+.tasks-list,
+.tasks-list> :hover {
+  background: none;
 }
