UI/UX Task manager
  - UX revamped: using responsive side panel.
  - Introducing color configuration for connections.
  - Introducing global default messages ordering configuration on settings page.
  - Another minor improvements.

--- a/src/styles.less
+++ b/src/styles.less
@@ -15,7 +15,7 @@ button.krust-toggle {
 }
 
 button.krust-toggle:checked {
-  background: #b7f39b;
+  //background: #b7f39b;
   text-decoration: underline;
 }
 
