Minor fixes and improvements.
  - #20 handling possible memory leak (message_send_dialog)
  - #14 ability to alternate between Live/Cached mode,
  without losing your current cached messages.
  - Live mode: message counter.
  - Refactoring caching process, making use of threads
  to speed up.
  - Fixing almost all the `Clippy` warnings.
  - Connection timeout configuration (Global settings or per connection)
  - Thread pool configuration on global settings.
  - Fetching messages task progress bar improvements.

--- a/src/styles.less
+++ b/src/styles.less
@@ -10,12 +10,16 @@ Mystic (light blue): #D8E9F0
   font-weight: bold;
 }
 
+button.krust-destroy {
+  background: #FF3F34;
+}
+
 button.krust-toggle {
   text-decoration: underline;
 }
 
 button.krust-toggle:checked {
-  //background: #b7f39b;
+  background: #b7f39b;
   text-decoration: underline;
 }
 
