--- a/src/styles.less
+++ b/src/styles.less
@@ -163,3 +163,30 @@ levelbar block.high {
 levelbar block.full {
   animation: attention 1s ease-in-out infinite;
 }
+
+
+.fetch-mode {
+  padding: 0;
+}
+
+.fetch-mode box {
+  margin-right: 0;
+  background-clip: padding-box;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+
+.cache-timestamp {
+  background-color: grey;
+  font-weight: 700;
+  min-height: 24px;
+  min-width: 24px;
+  padding: 5px;
+  color: white;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
