--- a/src/styles.less
+++ b/src/styles.less
@@ -190,3 +190,9 @@ levelbar block.full {
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
 }
+
+.cache-pill {
+  min-height: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
