--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,9 @@
 /*
+* Copyright (c) 2024, Miguel A. Baldi Hörlle <miguel.horlle@gmail.com>. All rights reserved. Use of
+* this source code is governed by the GPL-3.0 license that can be
+* found in the COPYING file.
+*/
+/*
 Logo/Theme colors:
 Red Orange 4: #FF3F34
 Pickled Bluewood 2: #314459
